--- a/src/app/theme/components/footer/footer.component.html
+++ b/src/app/theme/components/footer/footer.component.html
@@ -54,6 +54,6 @@
     </div>
     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" class="copyright secondary-color theme-container">
         <p ngClass.xs="mt-1">Copyright © 2018 All Rights Reserved</p>
-        <p>Designed & Developed by <a mat-button href="http://themeseason.com/" target="_blank">ThemeSeason</a></p>
+        <p>Designed & Developed by BigBoxApp</p>
     </div>
 </footer>
