--- a/src/app/theme/styles/_theme.scss
+++ b/src/app/theme/styles/_theme.scss
@@ -4,9 +4,9 @@
 @import 'theme-reset';
 .app{
     &.green{
-        @import "skins/green";
-        @include mat.all-component-colors($green-theme);
-        @include theme-reset($green-theme);
+        @import "skins/blue";
+        @include mat.all-component-colors($blue-theme);
+        @include theme-reset($blue-theme);
     }
     &.blue{
         @import "skins/blue";
