--- a/src/app/theme/components/footer/footer.component.html
+++ b/src/app/theme/components/footer/footer.component.html
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" class="copyright secondary-color theme-container">
-        <p ngClass.xs="mt-1">Copyright © {{thisYear}} All Rights Reserved</p>
+        <p ngClass.xs="mt-1">Copyright © 2018 All Rights Reserved</p>
         <p>Designed & Developed by © BigBoxApp</p>
     </div>
 </footer>
