--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
         <div fxLayout="row" fxLayoutAlign="center center"> 
             <div class="logo-section" fxShow="false" fxShow.gt-xs> 
                 <a routerLink="/admin" fxLayout="row" fxLayoutAlign="start center" class="logo"> 
-                    <span>Emporium</span> 
+                    <span>Amazing</span> 
                 </a>
             </div>                    
             <button mat-icon-button (click)="toggleSidenav()">
