--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,16 +5,16 @@
             <div fxLayout="row wrap" class="content">
                 <div fxFlex="100" class="mb-5 py-3"> 
                     <a routerLink="/admin" fxLayout="row" fxLayoutAlign="start center" class="logo"> 
-                        <span>Emporium</span> 
+                        <span>Amazing</span> 
                     </a>
                 </div>
                 <div fxFlex="100" class="py-5"> 
                     <h1>Angular Material Design eCommerce Template</h1>
-                    <h4 class="mt-3">Emporium implements the official Angular Material Design components and built with Angular CLI.</h4>
-                    <h4>No Bootstrap!, No jQuery! and Only TypeScript! Start creating your app with Emporium template, 6 color styles, 20+ pages.</h4>
+                    <h4 class="mt-3">Amazing implements the official Angular Material Design components and built with Angular CLI.</h4>
+                    <h4>No Bootstrap!, No jQuery! and Only TypeScript! Start creating your app with Amazing template, 6 color styles, 20+ pages.</h4>
                     <div class="py-5">
                         <button mat-raised-button color="primary" class="uppercase mx-2" (click)="scrollToDemos()">View demos</button> 
-                        <a mat-raised-button color="warn" href="https://themeforest.net/item/emporium-angular-material-design-ecommerce-template/21668189" target="_blank" class="uppercase mx-2">Purchase now</a> 
+                        <a mat-raised-button color="warn" href="https://invifo.com/" target="_blank" class="uppercase mx-2">Contact Us</a> 
                     </div>
                 </div>
             </div>
