--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -18,8 +18,8 @@
         <div fxLayout="column" fxLayoutAlign="center center">
             <mat-icon color="primary" class="mat-icon-lg">mail_outline</mat-icon>
             <h3 class="primary-text py-2">E-MAIL :</h3>
-            <span class="text-muted">contact&#64;emporium.com</span>
-            <span class="text-muted">info&#64;emporium.com</span>
+            <span class="text-muted">contact&#64;invifo.com</span>
+            <span class="text-muted">info&#64;invifo.com</span>
         </div>
     </div>
     <div class="divider w-100 mt-3"></div>
