--- a/src/app/theme/components/footer/footer.component.html
+++ b/src/app/theme/components/footer/footer.component.html
@@ -31,7 +31,7 @@
             </p>
             <p fxLayout="row" fxLayoutAlign="start center" class="mt-2 secondary-color">
                 <mat-icon>mail_outline</mat-icon>
-                <span>contact&#64;emporium.com</span>
+                <span>contact&#64;invifo.com</span>
             </p>
             <p fxLayout="row" fxLayoutAlign="start center" class="mt-2 secondary-color">
                 <mat-icon>schedule</mat-icon>
@@ -56,6 +56,6 @@
     </div>
     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" class="copyright secondary-color theme-container">
         <p ngClass.xs="mt-1">Copyright © 2023 All Rights Reserved</p>
-        <p>Designed & Developed by <a mat-button href="http://themeseason.com/" target="_blank">ThemeSeason</a></p>
+        <p>Designed & Developed by <a mat-button href="https://invifo.com/" target="_blank">Invifo</a></p>
     </div>
 </footer>
