--- a/src/app/theme/styles/_theme.scss
+++ b/src/app/theme/styles/_theme.scss
@@ -10,9 +10,9 @@ $custom-typography: mat.define-typography-config(
 @import 'theme-reset';
 .app{
     &.green{
-        @import "skins/green";
-        @include mat.all-component-colors($green-theme);
-        @include theme-reset($green-theme);
+        @import "skins/grey";
+        @include mat.all-component-colors($grey-theme);
+        @include theme-reset($grey-theme);
     }
     &.blue{
         @import "skins/blue";
@@ -34,9 +34,9 @@ $custom-typography: mat.define-typography-config(
         @include mat.all-component-colors($purple-theme);
         @include theme-reset($purple-theme);
     }
-    &.grey{
-        @import "skins/grey";
-        @include mat.all-component-colors($grey-theme);
-        @include theme-reset($grey-theme);
-    }
+    // &.grey{
+    //     @import "skins/grey";
+    //     @include mat.all-component-colors($grey-theme);
+    //     @include theme-reset($grey-theme);
+    // }
 }
