--- a/src/app/theme/styles/_base.scss
+++ b/src/app/theme/styles/_base.scss
@@ -352,7 +352,14 @@ a{
 .logo{
     font-size: 28px;
     font-weight: 900;
-    text-transform: uppercase;
+    // text-transform: uppercase;
+    text-decoration: none;
+    color: inherit;
+}
+.logo-version{
+    font-size: 14px;
+    font-weight: 900;
+    // text-transform: uppercase;
     text-decoration: none;
     color: inherit;
 }
