--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -34,8 +34,8 @@
         <mat-toolbar-row fxLayoutAlign="space-between center" class="logo-toolbar theme-container">
             
             <div fxFlex="20">
-                <a class="logo" routerLink="/" (click)="closeSubMenus()">Amazing </a>
-                <span class="logo-version"> v1.0.0</span>
+                <a class="logo" routerLink="/" (click)="closeSubMenus()">Emporium </a>
+                <span class="logo-version"> v1.0.1</span>
             </div>
             <div fxFlex fxShow="false" fxShow.gt-sm>
                 <form method="get" class="search-form" fxLayout="row">
